sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11:13: error: illegal start of simple expression
			if((ecart==9)||ecart==10)){
                                                 ^