sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.code
def combSort11() {
var ecart=getNombreValeurs()
var x=1
var i=0
while((x>0)||(ecart>1)){
	x=0
	if(ecart>1){
		ecart = (ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int]

	}
			i=0
			if((ecart==9)||ecart==10)){
				ecart=11
			}
	while(i+ecart<getNombreValeurs()){
		if(!plusPetit(i, i+ecart)){
			echange(i,i+ecart)
			x+=1
		}
			i+=1
	}
}
}
